﻿<h3>Version 1.0.6</h3>
<ul>
    <li>Implemented #16: ChangeFolder: Allow choosing actions to take about documents and files.</li>
    <li>Implemented #17: Allow to suppress updating of Last Modified Date.</li>
    <li>Allow delete documents with associated resources (files or URLs).</li>
    <li>Display clicks count in the download link tooltip.</li>
    <li>Fixed #13: Search is not working.</li>
    <li>Fixed #14: Hidden documents after folder deletion.</li>
    <li>Edit document form adjustments.</li>
    <li>Minor performance and stability improvements, code cleanup.</li>
</ul>

<h3>Version 1.0.5</h3>
<ul>
	<li>Edit column now hidden if not in edit mode.</li>
	<li>More space for title and description by collapsing all other columns to minimum width.</li>
	<li>DefaultFolder setting now stored as nullable int FolderId. Old templates imports with DefaultFolder = null.</li>
	<li>DefaultFolder setting now used in and can be updated with the ChangeFolder control.</li>
	<li>Edit and settings styles moved to admin.css.</li>
	<li>Module settings UI modernized.</li>
	<li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.0.4</h3>
<ul>
	<li>Ability to import documents from another R7.Documents or DNN Documents module.</li>
	<li>Control unpublishing of skipped documents when changing folder.</li>
	<li>Update or delete URL tracking data with document.</li>
	<li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.0.3</h3>
<ul>
	<li>New ChangeFolder action and control.</li>
	<li>Don't localize names of CSS classes for cells.</li>
</ul>

<h3>Version 1.0.2</h3>
<ul>
	<li>New modules have sorting by index, asc by default.</li>
	<li>Document's dates now set to the current date during template import.</li>
	<li>The document's SortIndex could be any signed Int32 value.</li>
	<li>Other small improvements and fixes.</li>
</ul>

<h3>Version 1.0.1</h3>
<ul>
	<li>Document description now displayed in the title tooltip.</li>