@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="5.0">
 	<packages>
-		<package name="R7.Documents" type="Module" version="01.00.06">
+		<package name="R7.Documents" type="Module" version="01.00.07">
 			<friendlyName>R7.Documents</friendlyName>
 			<description>This module renders a list of documents, including links to browse or download the document. Documents includes an edit page, which allows authorized users to edit the information about the Documents (for example, a friendly title) stored in the SQL database. Module based on the classic DNN Documents module.</description>
 			<owner>
@@ -104,9 +104,13 @@
 							<name>SqlDataProvider\01.00.00.SqlDataProvider</name>
 							<version>01.00.00</version>
 						</script>
+						<script type="Install">
+							<name>SqlDataProvider\01.00.07.SqlDataProvider</name>
+							<version>01.00.07</version>
+						</script>
 						<script type="UnInstall">
 							<name>SqlDataProvider\Uninstall.SqlDataProvider</name>
-							<version>01.00.06</version>
+							<version>01.00.07</version>
 						</script>
 					</scripts>
 				</component>
